--- a/bcpsbackend/Dockerfile
+++ b/bcpsbackend/Dockerfile
@@ -25,8 +25,6 @@ WORKDIR /app/bcpsbackend
 
 COPY . .
 
-RUN composer install
-
 EXPOSE 8000
 
-CMD php artisan serve --host=0.0.0.0
+CMD bash -c "composer install && php artisan serve --host 0.0.0.0"
