--- a/bcpsfrontend/Dockerfile
+++ b/bcpsfrontend/Dockerfile
@@ -2,10 +2,16 @@ FROM node:alpine
 
 WORKDIR /app/bcpsfrontend
 
-COPY . .
+COPY package.json .
 
+# Makes sure npm is up to date otherwise install dependencies attempts will fail
+RUN npm install -g npm
+
+# Install dependencies
 RUN npm install
+
+COPY . .
 
 EXPOSE 8001
 
-CMD npm start
+CMD ["npm", "start"]
