--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: "3.7"
+version: "3.8"
 services:
     backend:
         build:
             context: ./bcpsbackend
             dockerfile: Dockerfile
         ports:
-            - 8000:8000
+            - 3000:8000
         volumes:
             - ./bcpsbackend:/app/bcpsbackend
         networks:
@@ -17,9 +17,10 @@ services:
             dockerfile: Dockerfile
         tty: true
         ports:
-            - 8001:3000
+            - 8080:3000
         volumes:
             - ./bcpsfrontend:/app/bcpsfrontend
+            - /app/bcpsfrontend/node_modules
         depends_on:
             - backend
         networks:
