--- a/bcpsbackend/Dockerfile
+++ b/bcpsbackend/Dockerfile
@@ -27,4 +27,4 @@ COPY . .
 
 EXPOSE 3000
 
-CMD bash -c "composer install && php artisan serve --host 0.0.0.0"
+CMD bash -c "composer install && php artisan serve --host 0.0.0.0 --port=3000"
